<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.appdynamics.extensions</groupId>
    <artifactId>csa-license-extension</artifactId>
    <version>1.0</version>
    <packaging>jar</packaging>
    <name>csa-license-extension</name>

    <url>http://maven.apache.org</url>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
        <target.dir>${project.build.directory}/CSALicenseExtension</target.dir>
        <java.version>17</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
    </properties>

    <dependencies>
        <!-- mvn install:install-file -Dfile=machineagent.jar -DgroupId=local.repo
        -DartifactId=machineagent -Dversion=23.6 -Dpackaging=jar -DgeneratePom=true -->
        <dependency>
            <groupId>local.repo</groupId>
            <artifactId>machineagent</artifactId>
            <version>23.6</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.appdynamics</groupId>
            <artifactId>appd-exts-commons</artifactId>
            <version>2.2.9</version>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.23.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.23.0</version>
        </dependency>

        <dependency>
            <groupId>com.toastcoders</groupId>
            <artifactId>yavijava</artifactId>
            <version>6.0.05</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.30</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.12.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>2.2</version>
                <configuration>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/*.SF</exclude>
                                <exclude>META-INF/*.DSA</exclude>
                                <exclude>META-INF/*.RSA</exclude>
                            </excludes>
                        </filter>
                    </filters>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer
                                    implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                                <transformer
                                    implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <manifestEntries>
                                        <Implementation-Title>CSA License
                                            v${project.version} Build Date ${maven.build.timestamp}</Implementation-Title>
                                        <Main-Class>
                                            com.appdynamics.extensions.workbench.WorkbenchServerLauncher</Main-Class>
                                    </manifestEntries>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>1.6</version>
                <executions>
                    <execution>
                        <id>install</id>
                        <phase>install</phase>
                        <configuration>
                            <target>
                                <mkdir dir="${target.dir}" />
                                <copy todir="${target.dir}">
                                    <fileset dir="src/main/resources/conf" includes="monitor.xml" />
                                    <fileset dir="src/main/resources/conf" includes="config.yml" />
                                    <fileset dir="src/main/resources/conf"
                                        includes="csa_license.json" />
                                    <fileset dir="${project.basedir}" includes="LICENSE" />
                                    <fileset dir="${project.basedir}" includes="NOTICE.txt" />
                                </copy>
                                <copy todir="${target.dir}">
                                    <fileset dir="${project.build.directory}"
                                        includes="${project.build.finalName}.${project.packaging}" />
                                </copy>
                                <zip destfile="${target.dir}-${project.version}.zip">
                                    <zipfileset dir="${target.dir}" filemode="755"
                                        prefix="CSALicenseExtension/" />
                                </zip>
                                <delete dir="${target.dir}" />
                            </target>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.1</version>
            </plugin>
            <plugin>
                <artifactId>maven-scm-plugin</artifactId>
                <version>1.8.1</version>
                <configuration>
                    <tag>${project.artifactId}-${project.version}</tag>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>github-maven-repo</id>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <url>https://github.com/Appdynamics/maven-repo/raw/master/releases</url>
        </repository>
    </repositories>
    <scm>
        <connection>scm:git:https://github.com/Appdynamics/websphere-mq-monitoring-extension.git</connection>
    </scm>

</project>